# live2d-py

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.en.md  README.md  pyproject.toml  setup.py
.github/workflows/: build-linux-arm-manylinux.yml  build-linux-arm.yml  build-linux-manylinux.yml  build-linux.yml  build-macos-intel.yml  build-macos.yml  build-windows.yml
Live2D/Common/: Log.cpp  Log.hpp
Live2D/Glad/: CMakeLists.txt
Live2D/V2/: CMakeLists.txt
Live2D/V2/Core/: ArrayTypes.hpp  Avatar.cpp  Avatar.hpp  BinaryReader.cpp  BinaryReader.hpp  DEF.hpp  Debug.hpp  ISerializable.hpp  Id.cpp  Id.hpp  Live2DObjectFactory.cpp  Live2DObjectFactory.hpp  ModelImpl.cpp  ModelImpl.hpp  ParamDefFloat.cpp  ParamDefFloat.hpp  ParamDefSet.cpp  ParamDefSet.hpp  ParamPivots.cpp  ParamPivots.hpp  PartsData.cpp  PartsData.hpp  PartsDataContext.cpp  PartsDataContext.hpp  PivotManager.cpp  PivotManager.hpp
Live2D/V2/Deformer/: AffineEnt.cpp  AffineEnt.hpp  Deformer.cpp  Deformer.hpp  DeformerContext.hpp  RotationContext.cpp  RotationContext.hpp  RotationDeformer.cpp  RotationDeformer.hpp  WarpContext.cpp  WarpContext.hpp  WarpDeformer.cpp  WarpDeformer.hpp
Live2D/V2/Draw/: IDrawContext.hpp  IDrawData.cpp  IDrawData.hpp  Mesh.cpp  Mesh.hpp  MeshContext.hpp
Live2D/V2/Framework/: L2DBaseModel.cpp  L2DBaseModel.hpp  L2DExpressionMotion.cpp  L2DExpressionMotion.hpp  L2DExpressionParam.hpp  L2DEyeBlink.cpp  L2DEyeBlink.hpp  L2DMatrix44.cpp  L2DMatrix44.hpp  L2DModelMatrix.cpp  L2DModelMatrix.hpp  L2DMotionManager.cpp  L2DMotionManager.hpp  L2DPartsParam.hpp  L2DPhysics.cpp  L2DPhysics.hpp  L2DPose.cpp  L2DPose.hpp  L2DTargetPoint.cpp  L2DTargetPoint.hpp  LAppModel.cpp  LAppModel.hpp  MatrixManager.cpp  MatrixManager.hpp  PhysicsHair.cpp  PhysicsHair.hpp
Live2D/V2/Graphics/: ClipContext.cpp  ClipContext.hpp  ClippingManagerOpenGL.cpp  ClippingManagerOpenGL.hpp  DrawParamOpenGL.cpp  DrawParamOpenGL.hpp
Live2D/V2/Model/: ALive2DModel.cpp  ALive2DModel.hpp  Live2DModelOpenGL.cpp  Live2DModelOpenGL.hpp  ModelContext.cpp  ModelContext.hpp
Live2D/V2/Motion/: AMotion.hpp  Live2DMotion.cpp  Live2DMotion.hpp  Motion.hpp
Live2D/V2/Util/: UtInterpolate.cpp  UtInterpolate.hpp  UtMath.hpp  UtSystem.cpp  UtSystem.hpp
Live2D/V3/Main/: CMakeLists.txt  patch_1.cmake
Live2D/V3/Main/src/: CMakeLists.txt  HackProperties.h  LAppDefine.cpp  LAppDefine.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  MatrixManager.cpp  MatrixManager.hpp  Model.cpp  Model.hpp
Live2D/V3/Main/src/fine-grained/: Model.cpp  Model.hpp
Live2D/V3/cmake/: Core.cmake  Framework.cmake  Live2D.cmake  Main.cmake
Live2DViewer/: CMakeLists.txt
Live2DViewer/scene/: Live2DScene.hpp
Resources/: .gitignore
Wrapper/V2/: CMakeLists.txt  Init.cpp  PyLAppModel.cpp  PyLAppModel.hpp  Python.hpp
Wrapper/V3/: CMakeLists.txt  Init.cpp  PyLAppModel.cpp  PyLAppModel.hpp  PyModel.cpp  PyModel.hpp  Python.hpp
cmake/: Wrapper.cmake
docs/: manylinux.md
examples/: main_facial_bind.py  main_glfw.py  main_glfw_fine_grained.py  main_glfw_four_model.py  main_pygame.py  main_pygame_background.py  main_pygame_simple.py  main_pyqt5_canvas_opacity.py  main_pyqt5_multi_win.py  main_pyqt6_simple.py  main_pyside2.py  main_pyside6.py  main_pyside6_moderngl_qt.py  main_pyside6_simple.py  main_pyside6_v2cpp.py  requirements.txt  resources.py
examples/mediapipe_capture/: facial_params.py
package/: test_run_screenshot.py
package/live2d/: __init__.py
package/live2d/utils/: canvas.py  log.py
package/live2d/v2/: __init__.py  lapp_model.py  platform_manager.py
package/live2d/v2/core/: live2d_model_opengl.py
package/live2d/v2/core/graphics/: draw_param_opengl.py
package/live2d/v2/core/util/log/: __ut_log.py
package/live2d/v2/framework/model/: l2d_base_model.py
package/live2d/v2cpp/: .gitignore  __init__.py  _v2cpp.pyi
package/live2d/v3/: .gitignore  __init__.py  _v3cpp.pyi  lapp_model.py
tools/: fix_wheel_meta.py
